[package]
name = "fm_mod_synth"
version = "0.1.0"
authors = "gsspdev <dev@gssp.io>"
edition = "2021"
rust-version = "1.69.0"
description = "A simple package for fm synthesis"
readme = "README.md"
license = "MIT"
cpal = "0.13"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13"
