[package]
name = "fm_mod_synth"
version = "0.1.1"
edition = "2021"
rust-version = "1.69.0"
description = "A simple package for fm synthesis"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13"
proc-macro2 v1.0.58
unicode-ident v1.0.8
quote v1.0.27
memchr v2.5.0
glob v0.3.1
libc v0.2.144
minimal-lexical v0.2.1
syn v1.0.109
cfg-if v1.0.0
bindgen v0.64.0
regex-syntax v0.7.1
shlex v1.1.0
libloading v0.7.4
bitflags v1.3.2
rustc-hash v1.1.0
lazycell v1.3.0
peeking_take_while v0.1.2
lazy_static v1.4.0
thiserror v1.0.40
cpal v0.13.5
core-foundation-sys v0.8.4
clang-sys v1.6.1
nom v7.1.3
mach v0.3.2
syn v2.0.16
regex v1.8.1
cexpr v0.6.0
thiserror-impl v1.0.40
coreaudio-sys v0.2.12
coreaudio-rs v0.10.0 
