[package]
name = "fm_mod_synth"
version = "0.1.2"
edition = "2021"
rust-version = "1.69.0"
description = "A simple package for fm synthesis"
readme = "README.md"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.58"
unicode-ident = "1.0.8"
quote = "1.0.27"
memchr = "2.5.0"
glob = "0.3.1"
libc = "0.2.144"
minimal-lexical = "0.2.1"
cfg-if = "1.0.0"
bindgen = "0.64.0"
regex-syntax = "0.7.1"
shlex = "1.1.0"
libloading = "0.7.4"
bitflags = "1.3.2"
rustc-hash = "1.1.0"
lazycell = "1.3.0"
peeking_take_while = "0.1.2"
lazy_static = "1.4.0"
thiserror = "1.0.40"
cpal = "0.13.5"
core-foundation-sys = "0.8.4"
clang-sys = "1.6.1"
nom = "7.1.3"
mach = "0.3.2"
syn = "2.0.16"
regex = "1.8.1"
cexpr = "0.6.0"
thiserror-impl = "1.0.40"
coreaudio-sys = "0.2.12"
coreaudio-rs = "0.10.0" 
